Fixing entities and initial migration file. Ignoring app folder in tsconfig.build.json. Moving .editorconfig into root directory.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "bracketSameLine": true,
+  "tailwindConfig": "./app/tailwind.config.js"
 }
