--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 JWT_SECRET=some_random_string_of_characters
+ALLOWABLE_ORIGINS=["localhost:4200"]
 DATABASE_URL=postgres://username:password@salt.db.elephantsql.com/dbname
 DATABASE_TYPE=mongodb
 TYPEORM_SYNCHRONIZE=false
