--- a/package.json
+++ b/package.json
@@ -25,54 +25,54 @@
     "migrate:generate": "npm run build && ts-node ./src/migrate.ts --config=dist/configuration.js"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.1.2",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "joi": "^17.6.0",
-    "mongodb": "^3.7.3",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
+    "class-validator": "^0.14.0",
+    "joi": "^17.9.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3",
+    "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "rimraf": "^5.0.0",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
+    "@nestjs/cli": "^9.4.2",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "29.5.1",
     "@types/joi": "^17.2.3",
-    "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.17.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.8.1",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.7.3",
-    "yargs": "^17.6.0"
+    "@types/node": "^18.0.0",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4",
+    "yargs": "^17.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
