--- a/app/package.json
+++ b/app/package.json
@@ -15,32 +15,32 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/material": "^14.2.6",
+    "@angular/forms": "^15.2.9",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
-    "@auth0/angular-jwt": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@auth0/angular-jwt": "^5.1.2",
     "@ngneat/input-mask": "^6.1.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.5.2",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.0",
+    "@angular-devkit/build-angular": "^15.2.8",
     "@angular/cli": "~15.2.0",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular/compiler-cli": "^15.2.9",
     "@types/inputmask": "^5.0.3",
     "@types/jasmine": "~4.0.0",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
 }
