Adding public directory to artifact include in buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,6 +34,7 @@ phases:
 artifacts:
   files:
     - 'dist/**/*'
+    - 'public/**/*'
     - 'node_modules/**/*'
     - 'package.json'
     - 'Procfile'
